fix editor url input z-index

--- a/app/styles/editor/base_content_block.scss
+++ b/app/styles/editor/base_content_block.scss
@@ -179,6 +179,7 @@
       height: 35px;
       background-color: $color;
       color: white;
+      z-index: 10;
 
       form {
         flex: auto;
